Fix Supabase configuration: Add .env file and update API keys

--- a/public/test-supabase.html
+++ b/public/test-supabase.html
@@ -17,7 +17,7 @@
     
     <div class="info test">
         <strong>Testing connection to:</strong><br>
-        URL: https://fskadzvpcknoeeqxjtom.supabase.co<br>
+        URL: https://wrouapuobmzawodrzbpr.supabase.co<br>
         Project: daily-tracker
     </div>
 
@@ -30,8 +30,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
-        const supabaseUrl = 'https://fskadzvpcknoeeqxjtom.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZza2FkenZwY2tub2VlcXhqdG9tIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc1MjY4MjEsImV4cCI6MjA3MzEwMjgyMX0.C3U_Y_q8VPMa0CJFOu5-7yR4GZgyyHk4uZb9sGIhfOc';
+        const supabaseUrl = 'https://wrouapuobmzawodrzbpr.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indyb3VhcHVvYm16YXdvZHJ6YnByIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTkzMjkxODAsImV4cCI6MjA3NDkwNTE4MH0.qwUd7P1VKs31tSr_mk1QeCMNtR2rMcauGNRxa_NZmD0';
         
         const { createClient } = supabase;
         const sb = createClient(supabaseUrl, supabaseKey);
